# ai_agent_faq

./: pyproject.toml
.claude/: settings.local.json
app/: app.py  ingest.py  main.py  search_agent.py  search_tools.py  streamlit_app.py
app/logs/: gh_agent_20251006_185529_6a9e23.json
logs/: gh_agent_20251006_150545_75b9d2.json  gh_agent_20251006_184144_de2bea.json
